/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

plugins {
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDependencyManagement}"
    id 'java-library'
}

group 'fr.dademo.batch'
archivesBaseName = 'dademo-dependencies-batch-support'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withJavadocJar()
    withSourcesJar()
}

dependencies {

    api project(':modules:dependencies:data:definitions:shared')
    api project(':modules:dependencies:batch:batch_configuration')
    api project(':modules:dependencies:batch:batch_datasources:batch_jdbc')
    api project(':modules:dependencies:batch:batch_datasources:batch_mongodb')
    api project(':modules:dependencies:batch:batch_datasources:batch_rabbitmq')

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.batch:spring-batch-core'

    // Other libraries
    implementation "org.flywaydb:flyway-core:${flywayVersion}"
    implementation "com.zaxxer:HikariCP:${hikariCPVersion}"
    implementation "org.jooq:jooq:${jooqVersion}"
    implementation 'org.springframework.amqp:spring-amqp'
    implementation "org.jline:jline:${jlineVersion}"
    implementation "jakarta.validation:jakarta.validation-api:${jakartaValidationApiVersion}"
    implementation "com.google.code.findbugs:jsr305:${findBugsJsr305Version}"
    implementation "org.mapstruct:mapstruct:${mapStructVersion}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

